[tool.poetry]
name = "chess"
version = "0.1.0"
description = "A chess game implementation"
authors = ["vasekw <vasek.wichta@gmail.com>"]
readme = "README.md"
packages = [
    { include = "chess" },
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
